# brain-vessel-segmentation

./: .gitignore  README.md  pyproject.toml
data/DIAS/training/images/: thumbs.db
scripts/: test_rf.py  train_rf.py
